--- a/roles/desktop/tasks/logind.yml
+++ b/roles/desktop/tasks/logind.yml
@@ -1,4 +1,6 @@
 - name: Configure logind
   copy:
-    src: 00-logind.conf
+    src: "{{ item }}"
     dest: /etc/systemd/logind.conf.d
+  loop:
+    - idle-action.conf
