--- a/roles/laptop/tasks/logind.yml
+++ b/roles/laptop/tasks/logind.yml
@@ -1,4 +1,7 @@
 - name: Configure logind
   copy:
-    src: 00-logind.conf
+    src: "{{ item }}"
     dest: /etc/systemd/logind.conf.d
+  loop:
+    - idle-action.conf
+    - lid-switch.conf
