--- a/roles/workstation/tasks/packages.yml
+++ b/roles/workstation/tasks/packages.yml
@@ -34,6 +34,7 @@
       - fedora-packager
       - fedora-review
       - ffmpegthumbnailer
+      - firejail
       - fontawesome-fonts
       - fzf
       - git
