workstation: Use awesome-luajit-nightly copr repo

--- a/roles/workstation/tasks/packages.yml
+++ b/roles/workstation/tasks/packages.yml
@@ -9,7 +9,7 @@
   args:
     warn: false
   loop:
-    - jcrd/awesome-nightly
+    - jcrd/awesome-luajit-nightly
     - jcrd/clipped
     - jcrd/passless
     - jcrd/sessiond
