--- a/roles/laptop/tasks/packages.yml
+++ b/roles/laptop/tasks/packages.yml
@@ -1,6 +1,21 @@
+- name: Download linrunner gpg key
+  rpm_key:
+    key: https://repo.linrunner.de/fedora/tlp/repos/RPM-GPG-KEY-tlp-fedora-32-primary
+    fingerprint: 6BED 8C16 80E0 E9DC D310 94FB 274D 8DB1 A690 281B
+
+- name: Enable linrunner tlp repo
+  dnf:
+    name: 'https://repo.linrunner.de/fedora/tlp/repos/releases/tlp-release.fc{{ releasever }}.noarch.rpm'
+
 - name: Install packages
   dnf:
     name:
+      - akmod-acpi_call
       - powertop
       - tlp
       - upower
+
+- name: Set acpi_call module to be loaded
+  copy:
+    content: acpi_call
+    dest: /etc/modules-load.d/acpi_call.conf
