Explicitly install `awesome`
Don't rely on upgrading from basic-desktop.

--- a/roles/basic-desktop/tasks/remove_packages.yml
+++ b/roles/basic-desktop/tasks/remove_packages.yml
@@ -1,6 +1,7 @@
 - name: Remove packages included in basic-desktop software selection
   dnf:
     name:
+      - awesome
       - cronie
       - fprintd
       - i3
