basic-desktop: Ensure `NetworkManager-wifi` exists

--- a/roles/basic-desktop/tasks/remove_packages.yml
+++ b/roles/basic-desktop/tasks/remove_packages.yml
@@ -16,3 +16,6 @@
 
 - name: Autoremove leaf packages
   dnf: autoremove=yes
+
+- name: Ensure NetworkManager-wifi exists
+  dnf: name=NetworkManager-wifi
