Create `logind.conf.d` before configuring

--- a/roles/desktop/tasks/logind.yml
+++ b/roles/desktop/tasks/logind.yml
@@ -1,3 +1,8 @@
+- name: Create logind conf directory
+  file:
+    path: /etc/systemd/logind.conf.d
+    state: directory
+
 - name: Configure logind
   copy:
     src: "{{ item }}"
