workstation: Use zsh when configuring dotfiles

--- a/roles/workstation/tasks/dotfiles.yml
+++ b/roles/workstation/tasks/dotfiles.yml
@@ -13,6 +13,8 @@
     cd {{ configdir }}/{{ item }} &&
     source ../zsh/zshenv &&
     ./configure
+  args:
+    executable: /usr/bin/zsh
   loop:
     - configs
     - nvim
