--- a/roles/workstation/tasks/packages.yml
+++ b/roles/workstation/tasks/packages.yml
@@ -1,3 +1,9 @@
+- name: Download rpmfusion gpg keys
+  rpm_key: key={{ item }}
+  loop:
+    - https://rpmfusion.org/keys?action=AttachFile&do=get&target=RPM-GPG-KEY-rpmfusion-free-fedora-2020
+    - https://rpmfusion.org/keys?action=AttachFile&do=get&target=RPM-GPG-KEY-rpmfusion-nonfree-fedora-2020
+
 - name: Enable rpmfusion repos
   dnf:
     name:
