--- a/roles/laptop/tasks/packages.yml
+++ b/roles/laptop/tasks/packages.yml
@@ -1,7 +1,7 @@
 - name: Download linrunner gpg key
   rpm_key:
-    key: https://repo.linrunner.de/fedora/tlp/repos/RPM-GPG-KEY-tlp-fedora-32-primary
-    fingerprint: 6BED 8C16 80E0 E9DC D310 94FB 274D 8DB1 A690 281B
+    key: 'https://repo.linrunner.de/fedora/tlp/repos/RPM-GPG-KEY-tlp-fedora-{{ releasever }}-primary'
+    fingerprint: 0D3C F36C EB28 B582 D6DE F296 82B6 D96F 1381 B02A
 
 - name: Enable linrunner tlp repo
   dnf:
