workstation: Install `blueman`

--- a/roles/workstation/tasks/packages.yml
+++ b/roles/workstation/tasks/packages.yml
@@ -25,6 +25,7 @@
       - ImageMagick
       - abduco
       - atool
+      - blueman
       - chromium-freeworld
       - clipped
       - colordiff
