desktop: Set up `i2c` group and permissions
Allows use of `ddcutil` without root permission.

--- a/localhost.yml
+++ b/localhost.yml
@@ -16,5 +16,6 @@
     homedir: "{{ lookup('env', 'HOME') }}"
     configdir: '{{ homedir }}/.config'
     localdir: '{{ homedir }}/.local'
+    user: "{{ lookup('env', 'USER') }}"
   roles:
     - workstation
