--- a/roles/desktop/tasks/packages.yml
+++ b/roles/desktop/tasks/packages.yml
@@ -9,3 +9,22 @@
   dnf:
     name:
       - ddcutil
+
+- name: Copy i2c udev rule
+  copy:
+    src: /usr/share/ddcutil/data/45-ddcutil-i2c.rules
+    dest: /etc/udev/rules.d
+  become: yes
+
+- name: Create i2c group
+  group:
+    name: i2c
+    system: yes
+  become: yes
+
+- name: Add user to i2c group
+  user:
+    name: '{{ user }}'
+    groups: i2c
+    append: yes
+  become: yes
