workstation: Configure sudo timestamp timeout

--- a/roles/workstation/tasks/main.yml
+++ b/roles/workstation/tasks/main.yml
@@ -1,5 +1,7 @@
 - import_tasks: packages.yml
   become: yes
+- import_tasks: sudo.yml
+  become: yes
 - import_tasks: logind.yml
   become: yes
 - import_tasks: systemd.yml
