--- a/roles/workstation/tasks/packages.yml
+++ b/roles/workstation/tasks/packages.yml
@@ -89,6 +89,7 @@
   copy:
     src: liberation-fonts-local.conf
     dest: /etc/fonts/local.conf
+    mode: preserve
 
 - name: Add flathub flatpak remote
   flatpak_remote:
