--- a/roles/laptop/tasks/logind.yml
+++ b/roles/laptop/tasks/logind.yml
@@ -2,11 +2,13 @@
   file:
     path: /etc/systemd/logind.conf.d
     state: directory
+    mode: 0755
 
 - name: Configure logind
   copy:
     src: "{{ item }}"
     dest: /etc/systemd/logind.conf.d
+    mode: preserve
   loop:
     - idle-action.conf
     - lid-switch.conf
