Rename basic-desktop role to basic_desktop
Satisfies `ansible-lint`.

--- a/roles/workstation/meta/main.yml
+++ b/roles/workstation/meta/main.yml
@@ -1,5 +1,5 @@
 dependencies:
-  - role: basic-desktop
+  - role: basic_desktop
   - role: desktop
     when: chassis == 'desktop'
   - role: laptop
