workstation: Install dovetail excluding weak deps
Excludes `upower` which is not needed on desktops.

--- a/roles/workstation/tasks/packages.yml
+++ b/roles/workstation/tasks/packages.yml
@@ -31,7 +31,6 @@
       - colordiff
       - copr-cli
       - d-feet
-      - dovetail
       - exa
       - fedora-packager
       - fedora-review
@@ -73,6 +72,12 @@
       - xorg-x11-server-Xephyr
       - zoxide
       - zsh
+
+- name: Install packages excluding weak dependencies
+  dnf:
+    name:
+      - dovetail
+    install_weak_deps: no
 
 - name: Set zsh as user shell
   user:
