Gather facts and use `ansible_user_id` var

--- a/roles/workstation/tasks/packages.yml
+++ b/roles/workstation/tasks/packages.yml
@@ -85,12 +85,12 @@
 
 - name: Set zsh as user shell
   user:
-    name: '{{ ansible_user }}'
+    name: '{{ ansible_user_id }}'
     shell: /usr/bin/zsh
 
 - name: Add user to mock group
   user:
-    name: '{{ ansible_user }}'
+    name: '{{ ansible_user_id }}'
     groups: mock
     append: yes
 
