workstation: Add user to `dialout` group

--- a/roles/workstation/tasks/user.yml
+++ b/roles/workstation/tasks/user.yml
@@ -8,3 +8,10 @@
     name: '{{ ansible_user_id }}'
     groups: mock
     append: yes
+
+# Required to access serial ports.
+- name: Add user to dialout group
+  user:
+    name: '{{ ansible_user_id }}'
+    groups: dialout
+    append: yes
