workstation: Install `maim` and `xclip`
Used to copy areas of the screen to the clipboard.

--- a/roles/workstation/tasks/packages.yml
+++ b/roles/workstation/tasks/packages.yml
@@ -51,6 +51,7 @@
       - liberation-fonts
       - lm_sensors
       - luarocks
+      - maim
       - mosh
       - mpv
       - mupdf
@@ -74,6 +75,7 @@
       - the_silver_searcher
       - tmux
       - toolbox
+      - xclip
       - xorg-x11-server-Xephyr
       - zoxide
       - zsh
