Update `ansible-lint` pre-commit hook
Fix linting violations.

--- a/roles/desktop/tasks/main.yml
+++ b/roles/desktop/tasks/main.yml
@@ -1,6 +1,6 @@
 - import_tasks: packages.yml
-  become: yes
+  become: true
 - import_tasks: sudo.yml
-  become: yes
+  become: true
 - import_tasks: logind.yml
-  become: yes
+  become: true
