--- a/roles/workstation/tasks/main.yml
+++ b/roles/workstation/tasks/main.yml
@@ -1,13 +1,13 @@
 - import_tasks: packages.yml
-  become: yes
+  become: true
 - import_tasks: user.yml
-  become: yes
+  become: true
 - import_tasks: fonts.yml
-  become: yes
+  become: true
 - import_tasks: sudo.yml
-  become: yes
+  become: true
 - import_tasks: logind.yml
-  become: yes
+  become: true
 - import_tasks: systemd-user.yml
 - import_tasks: pulseaudio.yml
 - import_tasks: gnupg.yml
