--- a/roles/workstation/tasks/systemd-user.yml
+++ b/roles/workstation/tasks/systemd-user.yml
@@ -1,7 +1,7 @@
 - name: Enable systemd user units from packages
   systemd:
     name: "{{ item }}"
-    enabled: yes
+    enabled: true
     scope: user
   loop:
     - clipsync.service
