--- a/roles/workstation/tasks/dotfiles.yml
+++ b/roles/workstation/tasks/dotfiles.yml
@@ -2,11 +2,11 @@
   git:
     repo: 'https://github.com/jcrd/{{ item.repo }}'
     dest: '{{ configdir }}/{{ item.dest }}'
-    update: no
+    update: false
   loop:
-    - { repo: 'configs', dest: 'configs' }
-    - { repo: 'neovim-config', dest: 'nvim' }
-    - { repo: 'zsh-config', dest: 'zsh' }
+    - {repo: 'configs', dest: 'configs'}
+    - {repo: 'neovim-config', dest: 'nvim'}
+    - {repo: 'zsh-config', dest: 'zsh'}
 
 - name: Configure dotfiles
   shell: >
