workstation: Install `ripgrep`
Replaces `the_silver_searcher`.

--- a/roles/workstation/tasks/packages.yml
+++ b/roles/workstation/tasks/packages.yml
@@ -68,12 +68,12 @@
       - qutebrowser
       - ranger
       - redshift
+      - ripgrep
       - rofi
       - rpkg
       - sshfs
       - strace
       - sxiv
-      - the_silver_searcher
       - tigervnc
       - tmux
       - toolbox
