basic_desktop: Use pulseaudio in Fedora >= 34

--- a/roles/basic_desktop/tasks/remove_packages.yml
+++ b/roles/basic_desktop/tasks/remove_packages.yml
@@ -19,3 +19,7 @@
 
 - name: Autoremove leaf packages
   dnf: autoremove=true
+
+- name: Replace pipewire-pulseaudio with pulseaudio
+  dnf: name=pulseaudio allowerasing=yes
+  when: releasever | int >= 34
