--- a/roles/workstation/tasks/packages.yml
+++ b/roles/workstation/tasks/packages.yml
@@ -66,6 +66,7 @@
       - ps_mem
       - python-neovim
       - python-pillow
+      - python-tasklib
       - qutebrowser
       - ranger
       - redshift
@@ -78,6 +79,7 @@
       - strace
       - sxiv
       - syncthing
+      - task
       - tigervnc
       - tmux
       - toolbox
