workstation: Install `fira-code-fonts`

--- a/roles/workstation/tasks/packages.yml
+++ b/roles/workstation/tasks/packages.yml
@@ -38,6 +38,7 @@
       - fedora-packager
       - fedora-review
       - ffmpegthumbnailer
+      - fira-code-fonts
       - flatpak
       - fontawesome-fonts
       - fzf
