workstation: Don't install `lvim`

--- a/roles/workstation/tasks/dotfiles.yml
+++ b/roles/workstation/tasks/dotfiles.yml
@@ -5,6 +5,7 @@
     update: false
   loop:
     - {repo: 'configs', dest: 'configs'}
+    - {repo: 'neovim-config', dest: 'nvim'}
     - {repo: 'zsh-config', dest: 'zsh'}
 
 - name: Configure dotfiles
