workstation: Configure compose key

--- a/roles/workstation/tasks/main.yml
+++ b/roles/workstation/tasks/main.yml
@@ -8,6 +8,8 @@
   become: true
 - import_tasks: logind.yml
   become: true
+- import_tasks: xorg.yml
+  become: true
 - import_tasks: systemd-user.yml
 - import_tasks: gnupg.yml
 - import_tasks: dotfiles.yml
